--- a/404.md
+++ b/404.md
@@ -7,7 +7,7 @@ share: false
 permalink: /404.html
 ---  
 
-THIS PAGE IS OFFLINE NOW! Contact me if necessary: +(84)935 059109 - Email: minhhuy150894@gmail.com
+THIS PAGE IS OFFLINE NOW! Contact me if necessary:  - Email: daijian@shinskytech.com
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
